add mobile instructions

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                         <h1>Space Slimes</h1>
                         <span>Practice your math facts while saving the planet from the evil slimes!</span>
                         <br/>
+                        <span>Use your arrow keys on a PC, or tap the slimes on a phone or tablet.</span>
+                        <br/>
                         <span>To get started, choose a facts category.</span>
                         <br/>
                         <div style="text-align: left;">
