Remove reference to 100 points from the win screen

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div id="game-container">
                     <div class="dialog" id="win-dialog" style="display:none;">
                         <h1>You Win!</h1>
-                        <p>You reached 100 points. Great job!</p>
+                        <p>Great work! You're a pro at this.</p>
                         <center><button onclick="window.location.reload(false);">Play again</button></center>
                     </div>
                     <div class="stars"></div>
